<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>net.oschina.git.justlive1.breeze.snow</groupId>
	<artifactId>snow</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>snow</name>
	<url>https://gitee.com/justlive1/earth</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.8</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<spring.version>5.0.2.RELEASE</spring.version>
		<aspectj.version>1.8.9</aspectj.version>
		<assertj.version>2.6.0</assertj.version>
		<caffeine.version>2.3.5</caffeine.version>
		<classmate.version>1.3.3</classmate.version>
		<commons-beanutils.version>1.9.3</commons-beanutils.version>
		<commons-collections.version>3.2.2</commons-collections.version>
		<commons-fileupload>1.3.3</commons-fileupload>
		<ehcache.version>2.10.3</ehcache.version>
		<ehcache3.version>3.2.1</ehcache3.version>
		<freemarker.version>2.3.25-incubating</freemarker.version>
		<elasticsearch.version>2.4.4</elasticsearch.version>
		<gemfire.version>8.2.2</gemfire.version>
		<glassfish-el.version>3.0.0</glassfish-el.version>
		<gradle.version>2.9</gradle.version>
		<groovy.version>2.4.9</groovy.version>
		<gson.version>2.8.0</gson.version>
		<guava.version>21.0</guava.version>
		<h2.version>1.4.193</h2.version>
		<hibernate.version>5.0.12.Final</hibernate.version>
		<hibernate-validator.version>5.3.4.Final</hibernate-validator.version>
		<hikaricp.version>2.5.1</hikaricp.version>
		<hikaricp-java6.version>2.3.13</hikaricp-java6.version>
		<hikaricp-java7.version>2.4.11</hikaricp-java7.version>
		<httpclient.version>4.5.3</httpclient.version>
		<httpcore.version>4.4.6</httpcore.version>
		<jackson.version>2.9.2</jackson.version>
		<javassist.version>3.21.0-GA</javassist.version> <!-- Same as Hibernate -->
		<javax-cache.version>1.0.0</javax-cache.version>
		<javax-mail.version>1.5.6</javax-mail.version>
		<javax-transaction.version>1.2</javax-transaction.version>
		<javax-validation.version>1.1.0.Final</javax-validation.version>
		<jaxen.version>1.1.6</jaxen.version>
		<jedis.version>2.9.0</jedis.version>
		<jms-api.version>1.1-rev-1</jms-api.version>
		<joda-time.version>2.9.7</joda-time.version>
		<jstl.version>1.2</jstl.version>
		<junit.version>4.12</junit.version>
		<log4j.version>1.7.25</log4j.version>
		<logback.version>1.1.11</logback.version>
		<lombok.version>1.16.14</lombok.version>
		<mssql-jdbc.version>6.1.0.jre7</mssql-jdbc.version>
		<mockito.version>1.10.19</mockito.version>
		<mongodb.version>3.4.2</mongodb.version>
		<mysql.version>5.1.41</mysql.version>
		<servlet-api.version>3.1.0</servlet-api.version>
		<simple-json.version>1.1.1</simple-json.version>
		<slf4j.version>1.7.24</slf4j.version>
		<!-- Plugin versions -->
		<maven-antrun-plugin.version>1.8</maven-antrun-plugin.version>
		<maven-assembly-plugin.version>2.6</maven-assembly-plugin.version>
		<maven-clean-plugin.version>2.6.1</maven-clean-plugin.version>
		<maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
		<maven-dependency-plugin.version>2.10</maven-dependency-plugin.version>
		<maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
		<maven-eclipse-plugin.version>2.10</maven-eclipse-plugin.version>
		<maven-enforcer-plugin.version>1.4</maven-enforcer-plugin.version>
		<maven-failsafe-plugin.version>2.18.1</maven-failsafe-plugin.version>
		<maven-install-plugin.version>2.5.2</maven-install-plugin.version>
		<maven-invoker-plugin.version>1.10</maven-invoker-plugin.version>
		<maven-help-plugin.version>2.2</maven-help-plugin.version>
		<maven-jar-plugin.version>2.6</maven-jar-plugin.version>
		<maven-javadoc-plugin.version>2.10.4</maven-javadoc-plugin.version>
		<maven-resources-plugin.version>2.7</maven-resources-plugin.version>
		<maven-shade-plugin.version>2.4.3</maven-shade-plugin.version>
		<maven-site-plugin.version>3.5.1</maven-site-plugin.version>
		<maven-source-plugin.version>2.4</maven-source-plugin.version>
		<maven-surefire-plugin.version>2.18.1</maven-surefire-plugin.version>
		<maven-war-plugin.version>2.6</maven-war-plugin.version>
		<versions-maven-plugin.version>2.2</versions-maven-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>

			<!-- self api -->
			<dependency>
				<groupId>net.oschina.git.justlive1.breeze.snow</groupId>
				<artifactId>snow-common-base</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>net.oschina.git.justlive1.breeze.snow</groupId>
				<artifactId>snow-common-web</artifactId>
				<version>${project.version}</version>
			</dependency>

			<!-- Spring begin -->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-webmvc</artifactId>
				<version>${spring.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-test</artifactId>
				<version>${spring.version}</version>
				<scope>test</scope>
			</dependency>
			<!-- Spring end -->

			<dependency>
				<groupId>commons-fileupload</groupId>
				<artifactId>commons-fileupload</artifactId>
				<version>${commons-fileupload}</version>
			</dependency>


			<dependency>
				<groupId>org.aspectj</groupId>
				<artifactId>aspectjrt</artifactId>
				<version>${aspectj.version}</version>
			</dependency>
			<dependency>
				<groupId>org.aspectj</groupId>
				<artifactId>aspectjweaver</artifactId>
				<version>${aspectj.version}</version>
			</dependency>

			<!-- Servlet -->
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>javax.servlet-api</artifactId>
				<version>${servlet-api.version}</version>
				<scope>provided</scope>
			</dependency>

			<!-- lombok -->
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
			</dependency>

			<!-- json -->
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-core</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>${jackson.version}</version>
			</dependency>

			<!-- log -->
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>${logback.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${log4j.version}</version>
			</dependency>

			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>${guava.version}</version>
			</dependency>

			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<modules>
		<module>snow-common-web</module>
		<module>snow-common-base</module>
	</modules>
</project>